--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gsap": "^3.12.7",
     "html-react-parser": "^5.2.2",
     "jose": "^5.9.6",
+    "lenis": "^1.2.0",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "mongoose": "^8.10.0",
