--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
     "tinymce": "^7.7.0",
+    "xss": "^1.0.15",
     "zod": "^3.24.1"
   },
   "overrides": {
