--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "quill-html-edit-button": "^3.0.0",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
+    "react-date-picker": "^11.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
@@ -58,7 +59,8 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
     "tinymce": "^7.7.0",
-    "zod": "^3.24.1"
+    "xss": "^1.0.15",
+    "zod": "^3.25.67"
   },
   "overrides": {
     "motion": {
